--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "homepage": "https://github.com/mary-clayton/API-I#readme",
   "keywords": [],
   "description": "",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.17.1"
+  },
   "devDependencies": {
     "nodemon": "^1.19.4"
   }
